[tool.poetry]
name = "grain-analysis"
version = "0.1.0"
description = "A Python-based grain analysis tool that uses OpenCV for image processing to measure and visualize grain dimensions."
authors = ["Jose Henrique Roveda"]
readme = "README.md"
packages = [{include = "seed_counter"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.2"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
